fixed scrollbar on adminDashboard, AdminDormRequest pages, formatting issues

--- a/react-app/src/components/AdminDormRequests.css
+++ b/react-app/src/components/AdminDormRequests.css
@@ -25,16 +25,17 @@
     height: 54%;
     border-style: groove;
     margin-top: 1.3%;
-    margin-left: 54%;
+    margin-left: 53%;
     border-radius: 14px!important;
 }
 
-.buildingsList-div{
+.buildingStudentList-div{
     position:fixed;
     font-size: 160%;
-    width: 22.5%;
+    width: 22%;
     height: 45%;
     text-align: left;
+    margin-left: 1.4%;
     border-style: groove;
     border-radius: 14px!important;
 
